More updates; added temporary support for Postgres.